fix: text overflow

--- a/packages/devextreme-scss/scss/widgets/fluent/dataGrid/_index.scss
+++ b/packages/devextreme-scss/scss/widgets/fluent/dataGrid/_index.scss
@@ -74,6 +74,8 @@
     display: inline-block;
     position: sticky;
     background-color: $datagrid-group-row-bg;
+    width: 100%;
+    overflow: clip;
   }
 
   .dx-row.dx-group-row:first-child {
