--- a/packages/devextreme-scss/scss/widgets/generic/dataGrid/_index.scss
+++ b/packages/devextreme-scss/scss/widgets/generic/dataGrid/_index.scss
@@ -100,6 +100,8 @@
     display: inline-block;
     position: sticky;
     background-color: $datagrid-group-row-bg;
+    width: 100%;
+    overflow: clip;
   }
 }
 
